# news_of_the_world

./: .coverage  Makefile  README.md  __init__.py  main.py  pyproject.toml
.github/workflows/: ci.yml  daily_summary.yml  rss_parser.yml  scheduler.yml  weekly_summary.yml
alembic/: env.py
alembic/versions/: 0c37a26b60ab_initial_schema.py  9ebc95ca31d0_add_grok_interactions.py  b37c483e185a_create_grok_interactions_table.py  d4c8e2f1a3b9_add_top_articles_column.py
db/: database.py
models/: models.py
parser/: config_loader.py  feeds.yaml  grok_summarizer.py  rss_parser.py
summarizers/: __init__.py  base.py  cli.py  daily_processor.py  grok.py  preview_prompts.py  prompt_builder.py
tests/: test_config_loader_extra.py  test_daily_processor_time_windows.py  test_grok.py  test_prompt_builder.py  test_rss_parser.py  test_rss_parser_extra.py  test_rss_parser_more.py  test_summarizers_base_extra.py
tg_bot/: bot.py
utils/: env_validation.py  logging_config.py
